--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         IPC-Shm
-version:      0.32
+version:      0.33
 version_from: IPC/Shm.pm
 installdirs:  site
 requires:
     Carp:                          0
     Class::Attrib:                 1.06
+    Digest::SHA1:                  0
     IPC::Shm::Simple:              1.07
     Scalar::Util:                  0
     Storable:                      0
